--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -18,7 +18,7 @@
                     </div>
                     <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
                     <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
+                    <a class="general-link" href="hire-person.html">mehr Erfahren</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -26,7 +26,7 @@
                     </div>
                     <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
                     <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
+                    <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -47,4 +47,15 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
+
+    <div class="our-network">
+        <div class="container">
+            <div class="home-title current-title">Unser Netzwerk</div>
+            <div class="our-network-content">
+                <img src="img/autismus_logo.png" alt="img">
+                <img src="img/bso_logo.png" alt="img">
+                <img src="img/auticon_logo.png" alt="img">
+            </div>
+        </div>
+    </div>
 </main>
