--- a/app/_home.html
+++ b/app/_home.html
@@ -33,13 +33,18 @@
 				</div>
 			  </div>
 			</div>
+			<div class="swiper-button-next"></div>
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-pagination"></div>
+			<div>
+			</div>
 			<!-- Add Pagination -->
 			<!-- <div class="swiper-block d-flex">
 				<div class="swiper-pagination test ml-5"></div>
 				<div class="swiper-pagination test ml-5"></div>
 				<div class="swiper-pagination test ml-5"></div>
 			</div> -->
-			<div class="swiper-btn">
+			<!-- <div class="swiper-btn">
 				<div class="swiper-button-prev">
 					<img src="img/svg/arrow_left.svg" alt="img">
 				</div>
@@ -47,7 +52,7 @@
 				<div class="swiper-button-next">
 					<img src="img/svg/arrow_right.svg" alt="img">
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!-- <div class="home-content">
 			<div class="home-title">inAut GmbH</div>
