--- a/app/hire-person.html
+++ b/app/hire-person.html
@@ -52,48 +52,24 @@
 		</div>
 	</div>
 </header>
-	<main class="main angebot">
-	<div class="container home">
-        <div class="angebot-header">
-            <img class="angebot-img" src="img/bildf.png" alt="img">
-        </div>
-	</div>
-    <div class="container">
-        <div class="angebot-item">Für Unternehmen</div>
-        <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
-        <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
-        <div class="decor"></div>
-
-        <div class="angebot-block">
-            <div class="row">
-                <div class="col-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/chair.svg" alt="img">
-                    </div>
-                    <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
-                    <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
-                    <a class="general-link" href="hire-person.html">mehr Erfahren</a>
-                </div>
-                <div class="col-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/setm.svg" alt="img">
-                    </div>
-                    <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
-                    <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
-                    <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
-                </div>
-                <div class="col-4 angebot-block-content">
-                    <div class="angebot-block-img">
-                        <img src="img/svg/shapm.svg" alt="img">
-                    </div>
-                    <h2 class="angebot-block-title">Weiterbildungen</h2>
-                    <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
-                </div>
+	<main class="main search-missions">
+	<div class="container search-missions-container">
+        <div>
+            <div class="search-missions-way">
+                <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="#">Für Unternehmen</a>
             </div>
+            <div class="search-missions-item">
+                <div class="search-missions-image">
+                    <img src="img/svg/chairmm.svg" alt="img">
+                </div>
+                <div class="angebot-item search-missions-article">Für Unternehmen</div>
+            </div>
+            <h1>Machen Sie als Firma den entscheidenden Unterschied</h1>
+            <div class="angebot-text search-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
         </div>
     </div>
-
     <div class="contact-us">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
@@ -101,15 +77,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-
-    <div class="our-network">
-        <div class="container">
-            <div class="home-title current-title">Unser Netzwerk</div>
-            <div class="our-network-content">
-                <img src="img/autismus_logo.png" alt="img">
-                <img src="img/bso_logo.png" alt="img">
-                <img src="img/auticon_logo.png" alt="img">
-            </div>
+    <div class="container search-missions-back">
+        <div class="search-missions-content">
+            <a class="search-missions-img" href="angebot.html">
+                <img src="img/svg/leftm.svg" alt="img">
+            </a>
+            <div class="search-missions-text">Zurück</div>
         </div>
     </div>
 </main>
