advanced training page

--- a/app/_angebot.html
+++ b/app/_angebot.html
@@ -8,7 +8,9 @@
         <div class="angebot-item">Angebot</div>
         <h1 class="angebot-title">Massgeschneiderte Begleitung für Sie</h1>
         <div class="angebot-text an-text">Die Angebote der inAut GmbH können einzeln oder gesamthaft nacheinander in Anspruch genommen werden, sofern eine Kostengutsprache einer zuweisenden Stelle (z.B. IV-Stellen, Sozialdienst, RAV, Pro Infirmis) vorhanden ist. Sie sind noch nicht bei der IV oder einer anderen Stelle gemeldet, würden aber gerne durch uns unterstützt werden? Rufen Sie uns an, wir beraten Sie gerne!</div>
-        <div class="decor"></div>
+        <div class="line-dec">
+            <div class="line-dec-content"></div>
+        </div>
 
         <div class="angebot-block">
             <div class="row">
