--- a/app/_for-companies.html
+++ b/app/_for-companies.html
@@ -8,7 +8,9 @@
         <div class="angebot-item">Für Unternehmen</div>
         <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
         <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
-        <div class="decor"></div>
+        <div class="line-dec">
+            <div class="line-dec-content"></div>
+        </div>
 
         <div class="angebot-block">
             <div class="row">
@@ -34,7 +36,7 @@
                     </div>
                     <h2 class="angebot-block-title">Weiterbildungen</h2>
                     <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
+                    <a class="general-link" href="advanced-training.html">mehr Erfahren</a>
                 </div>
             </div>
         </div>
