--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -57,16 +57,58 @@
         <div class="search-missions-way">
             <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Unterstützung im Arbeitsalltag</a>
+            <a class="search-missions-link" href="#">Weiterbildung</a>
         </div>
         <div class="search-missions-item">
             <div class="search-missions-image">
-                <img src="img/svg/setim.svg" alt="img">
+                <img src="img/svg/icon_schnup.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Unterstützung im Arbeitsalltag</div>
+            <div class="angebot-item search-missions-article">Weiterbildung</div>
         </div>
-        <h1>inAut berät Sie und Ihre Firma kompetent und bedarfsgerecht</h1>
-        <div class="angebot-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
+        <h1>Das Thema Neurodiversität vertieft kennenlernen</h1>
+        <div class="angebot-text search-text">Sie möchten gerne mehr über das Thema Neurodivesität erfahren? Woher stammt der Begriff und was beinhaltet er? Was versteht man unter “Autismus-Spektrum”, “AD(H)S” oder “Tourette-Syndrom” und wie zeigen sich diese Diagnosen bei den Betroffenen? Welche Stärken werden dadurch entfacht und welche Chancen entstehen für die Privatwirtschaft? inAut bietet auf Ihre Bedürfnisse und Interessen zugeschneiderte Weiterbildungsmöglichkeiten an.</div>
+
+        <div class="line-dec">
+            <div class="line-dec-content"></div>
+        </div>
+
+        <div class="advanced-training-content">
+            <h2 class="advanced-training-title">Workshop</h2>
+            <p class="advanced-training-text">Ermöglichen Sie Ihrem Team oder der ganzen Firma einen Einblick in die Hintergründe des Autismus-Spektrums und AD(H)S. Lernen Sie in Kürze, was mit Neurodiversität gemeint ist und besprechen Sie Themen, die Sie in Ihrem Arbeitsalltag beschäftigen.</p>
+            <div class="advanced-training-title">Zielpublikum: <span class="advanced-training-text">Teams, Ausbilder/innen, Arbeitgeber/innen, gesamte Firma</span></div>
+            <div class="advanced-training-title">Dauer: <span class="advanced-training-text">30-60 Minuten</span></div>
+            <div class="advanced-training-title">Kosten: <span class="advanced-training-text">Gerne erstellen wir Ihnen eine individuelle Offerte.</span></div>
+
+            <div class="line-dec">
+                <div class="line-dec-content decoration"></div>
+            </div>
+
+            <h2 class="advanced-training-title">Weiterbildung Neurodiversität</h2>
+            <p class="advanced-training-text advanced-text">Sie erhalten einen vertieften Ein- und Überblick über ASS, AD(H)S, Tourette-Syndrom und andere neurodiverse Erscheinungsformen. Sie lernen mehr über den Aufbau und die Vernetzung unseres Gehirns und was der Zusammenhang zwischen Neurowissenschaft und den erwähnten Diagnosen ist. Sie können Ihre Erfahrungen im Arbeitsalltag teilen und erhalten praktische Tipps und Ideen, die Sie direkt umsetzen können.</p>
+            <div class="advanced-training-title">Zielpublikum: <span class="advanced-training-text">Firma, Organisation, Team, Fachpersonen (IV, Soziale Dienste, RAV, Soziale Arbeit), Studierende (HF, FH)</span></div>
+            <div class="advanced-training-title">Dauer: <span class="advanced-training-text">Minimum 4, Maximum 8 Stunde</span></div>
+            <div class="advanced-training-title">Kosten: <span class="advanced-training-text">Gerne erstellen wir Ihnen eine individuelle Offerte.</span></div>
+
+            <div class="line-dec">
+                <div class="line-dec-content decoration"></div>
+            </div>
+
+            <h2 class="advanced-training-title">Teamcoaching</h2>
+            <p class="advanced-training-text">Bei Ihnen geht es nicht um reine Wissensvermittlung und praktische Tipps, Sie würden sich gerne als Team vertieft mit Themen der Neurodiversität und damit in Zusammenhang stehenden Herausforderungen oder gar Spannungen im Team auseinandersetzen? Wir bieten Ihnen systemisch-lösungsorientierte Supervision und Teamcoaching an.</p>
+            <div class="advanced-training-title">Zielpublikum: <span class="advanced-training-text">Team</span></div>
+            <div class="advanced-training-title">Dauer: <span class="advanced-training-text">nach Bedarf, Minimal jedoch 3 Veranstaltungen</span></div>
+            <div class="advanced-training-title">Kosten: <span class="advanced-training-text">Gerne erstellen wir Ihnen eine individuelle Offerte.</span></div>
+
+            <div class="line-dec">
+                <div class="line-dec-content decoration"></div>
+            </div>
+
+            <h2 class="advanced-training-title">Organisationsberatung</h2>
+            <p class="advanced-training-text">Sie würden gerne als Organisation diverser und offener werden und Möglichkeiten bestimmen, auf welche Art und wohin Sie sich entwickeln möchten? Haben Ihre Ideen mit Vielfalt (Diversity) und Einbindung (Inclusion) zu tun und Sie würden gerne mit einer Fachperson mögliche Wege bestimmen? inAut bietet systemisch-lösungsorientierte Organisationsberatung und Entwicklung an.</p>
+            <div class="advanced-training-title">Zielpublikum: <span class="advanced-training-text">Organisationen</span></div>
+            <div class="advanced-training-title">Dauer: <span class="advanced-training-text">nach Bedarf, Minimal jedoch 3 Veranstaltungen</span></div>
+            <div class="advanced-training-title">Kosten: <span class="advanced-training-text">Gerne erstellen wir Ihnen eine individuelle Offerte.</span></div>
+        </div>
     </div>
     <div class="contact-us">
 		<div class="container">
