--- a/app/_header.html
+++ b/app/_header.html
@@ -7,7 +7,7 @@
 			<ul class="menu">
 				<li><a href="angebot.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
-				<li><a href="#">Über uns</a></li>
+				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="#">Aktuelles</a></li>
 				<li><a href="#">Jobs</a></li>
 				<li><a href="#"> Kontakt</a></li>
