--- a/app/_header.html
+++ b/app/_header.html
@@ -8,7 +8,7 @@
 				<li><a href="angebot.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
-				<li><a href="#">Aktuelles</a></li>
+				<li><a href="current.html">Aktuelles</a></li>
 				<li><a href="#">Jobs</a></li>
 				<li><a href="#"> Kontakt</a></li>
 			</ul>
