--- a/app/_home.html
+++ b/app/_home.html
@@ -140,7 +140,7 @@
 		</div>
 	</div>
 
-	<!-- current -->
+	<!-- press -->
 	<div class="current">
 		<div class="container">
 			<div class="home-title current-title">Aktuelles</div>
