--- a/app/current.html
+++ b/app/current.html
@@ -54,34 +54,44 @@
 </header>
 	<main class="main search-missions">
 	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Für Unternehmen</a>
-        </div>
         <div class="search-missions-item">
-            <div class="search-missions-image">
-                <img src="img/svg/chairmm.svg" alt="img">
+            <div class="angebot-item search-missions-article">Aktuelles</div>
+        </div>
+        <h1 class="text-p">News und Hintergrundinformationen </h1>
+        <div class="angebot-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
+        <div class="news text-p">
+            <div class="news-left">
+                <img src="img/kursaalbern_aussenansicht.png" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Für Unternehmen</div>
+            <div class="news-right">
+                <div class="angebot-item">Natascha Nikolic, 4. August 2021</div>
+                <h3 class="news-title team-indent">2. Nationaler Autismus Kongress</h3>
+                <div class="angebot-text team-indent">autismusschweiz ist stolz, drei Jahre nach dem ersten gesamtschweizerischen Kongress zum Thema Autismus, den zweiten Autismus-Kongress in Bern zu präsentieren.</div>
+                <a class="general-link" href="#">mehr Erfahren</a>
+            </div>
         </div>
-        <h1>Machen Sie als Firma den entscheidenden Unterschied</h1>
-        <div class="angebot-text search-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
-    </div>
-    <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="search-missions-text">Zurück</div>
+        <div class="news-content">
+            <div class="news-left">
+                <img src="img/angular.png" alt="img">
+                <div class="news-card">
+                    <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
+                    <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
+                    <div class="angebot-text team-indent">Lerne den Beruf Applikationsentwickler:in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht...</div>
+                    <a class="general-link" href="#">mehr Erfahren</a>
+                </div>
+            </div>
+
+            <div class="news-left">
+                <img src="img/wdr.png" alt="img">
+                <div class="news-card">
+                    <div class="angebot-item">WDR, 22. Juni 2021</div>
+                    <h3 class="news-title team-indent">Leben als Autist</h3>
+                    <div class="angebot-text team-indent">Dass etwas mit ihm nicht stimmt, das merkt Julian aus Lennestadt schon sehr früh. Doch erst mit zwölf Jahren erhält er die Diagnose - Asperger Autismus. Bis dahin war es ein schwerer Weg - nicht nur für Julian.</div>
+                    <a class="general-link" href="#">mehr Erfahren</a>
+                </div>
+            </div>
         </div>
+        <a class="general-link news-link" href="#">mehr laden</a>
     </div>
 </main>
 	<footer class="footer">
