blog-article content

--- a/app/_current.html
+++ b/app/_current.html
@@ -23,7 +23,7 @@
                     <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
                     <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
                     <div class="angebot-text team-indent">Lerne den Beruf Applikationsentwickler:in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht...</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
+                    <a class="general-link" href="blog-article.html">mehr Erfahren</a>
                 </div>
             </div>
 
