--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -54,44 +54,60 @@
 </header>
 	<main class="main search-missions">
 	<div class="container search-missions-container">
+        <div class="search-missions-way">
+            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="angebot.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="#">Online-Workshop Webentwicklung</a>
+        </div>
         <div class="search-missions-item">
-            <div class="angebot-item search-missions-article">Aktuelles</div>
+            <div class="angebot-item search-missions-article">Res Kocher, 20. Mai 2021</div>
         </div>
-        <h1 class="text-p">News und Hintergrundinformationen </h1>
-        <div class="angebot-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
-        <div class="news text-p">
-            <div class="news-left">
-                <img src="img/kursaalbern_aussenansicht.png" alt="img">
-            </div>
-            <div class="news-right">
-                <div class="angebot-item">Natascha Nikolic, 4. August 2021</div>
-                <h3 class="news-title team-indent">2. Nationaler Autismus Kongress</h3>
-                <div class="angebot-text team-indent">autismusschweiz ist stolz, drei Jahre nach dem ersten gesamtschweizerischen Kongress zum Thema Autismus, den zweiten Autismus-Kongress in Bern zu präsentieren.</div>
-                <a class="general-link" href="#">mehr Erfahren</a>
-            </div>
+        <h1 class="coaching-job-title">Online-Workshop Webentwicklung</h1>
+        <div class="angebot-text search-text">Lerne den Beruf Applikationsentwickler/in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht und ob Applikationsentwicklung die richtige Fachrichtung für dich ist? Du willst dich mit deiner Bewerbung von anderen abheben? Dann ist dies der richtige Kurs für dich - und das Beste: er ist kostenlos!</div>
+        <div class="line-dec">
+            <div class="line-dec-content decoration"></div>
         </div>
-        <div class="news-content">
-            <div class="news-left">
-                <img src="img/angular.png" alt="img">
-                <div class="news-card">
-                    <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
-                    <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
-                    <div class="angebot-text team-indent">Lerne den Beruf Applikationsentwickler:in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht...</div>
-                    <a class="general-link" href="blog-article.html">mehr Erfahren</a>
-                </div>
-            </div>
+        <div class="blog-article">
+            <h2>Was du lernst</h2>
+            <ul>
+                <li>HTML / CSM</li>
+                <li>Angula</li>
+                <li>Javascript / Typescript</li>
+                <li>Aufbau einer Webseite</li>
+                <li>Hosting einer Webseite</li>
+            </ul>
+            <h2>Voraussetzungen</h2>
+            <ul>
+                <li>Du bist auf der Suche nach dem richtigen Job</li>
+                <li>Du bist noch unentschlossen</li>
+                <li>Du unterscheidest dich zu neurotypischen Personen in bspw. Form einer ASS Diagnose, AD(H)S oder ähnlichem</li>
+            </ul>
+            <h2>Was du mitbringen musst</h2>
+            <ul>
+                <li>Motivation für Webentwicklung</li>
+                <li>Interesse für Informatik</li>
+                <li>Erste Informatikkenntnisse</li>
+                <li>Eigenen Laptop mit Internetzugang und Headset</li>
+            </ul>
+            <h2>Ziele</h2>
+            <ul>
+                <li>Du kennst den Beruf Applikationsentwickler/in besser</li>
+                <li>Du kannst eine kleine Webseite bauen</li>
+                <li>Eine Webseite, die zu Bewerbungen beigelegt werden kann</li>
+            </ul>
+            <h2>Wann</h2>
+            <div>17.07.21 - 09:00-11:30</div>
+            <div>24.07.21 - 09:30-11:30</div>
+            <div>07.08.21 - 09:30-11:30</div>
+            <div>14.08.21 - 09:30-11:30</div>
+            <div>21.08.21 - 09:30-11:30</div>
+            <div>28.08.21 - 09:30-11:30</div>
+            <div class="team-indent">04.09.21 - 09:30-11:30</div>
+            <h2>Wo</h2>
+            <div class="text-p">Online über Discord</div>
+            <a class="home-btn blog-article-btn" href="#">Zur Anmeldung</a>
 
-            <div class="news-left">
-                <img src="img/wdr.png" alt="img">
-                <div class="news-card">
-                    <div class="angebot-item">WDR, 22. Juni 2021</div>
-                    <h3 class="news-title team-indent">Leben als Autist</h3>
-                    <div class="angebot-text team-indent">Dass etwas mit ihm nicht stimmt, das merkt Julian aus Lennestadt schon sehr früh. Doch erst mit zwölf Jahren erhält er die Diagnose - Asperger Autismus. Bis dahin war es ein schwerer Weg - nicht nur für Julian.</div>
-                    <a class="general-link" href="#">mehr Erfahren</a>
-                </div>
-            </div>
         </div>
-        <a class="general-link news-link" href="#">mehr laden</a>
     </div>
 </main>
 	<footer class="footer">
