--- a/app/_blog-article.html
+++ b/app/_blog-article.html
@@ -54,5 +54,30 @@
             <a class="home-btn blog-article-btn" href="#">Zur Anmeldung</a>
 
         </div>
+        <div class="blog-article-block">
+            <h3>Dein Coach – Res Kocher</h3>
+            <ul>
+                <li>Coach Informatik</li>
+                <li>Frontend Enthusiast</li>
+                <li>Angular Love</li>
+                <li>Apple Fan</li>
+                <li>Game Geek</li>
+                <li>Serien und Film Junkie</li>
+            </ul>
+        </div>
+        <div class="search-missions-back blog-article-arows">
+            <div class="search-missions-content">
+                <a class="search-missions-img" href="angebot.html">
+                    <img src="img/svg/leftm.svg" alt="img">
+                </a>
+                <div class="search-missions-text">Zurück</div>
+            </div>
+            <div class="search-missions-content">
+                <div class="search-missions-text">Nächster Artikel</div>
+                <a class="search-missions-img blog-article-arows-right" href="angebot.html">
+                    <img src="img/svg/ar_right.svg" alt="img">
+                </a>
+            </div>
+        </div>
     </div>
 </main>
