--- a/app/jobs.html
+++ b/app/jobs.html
@@ -52,22 +52,68 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Coaching während der Ausbildung</a>
+	<main class="main angebot">
+	<div class="container home">
+        <div class="angebot-header">
+            <img class="angebot-img" src="img/jobm.png" alt="img">
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
-                <img src="img/svg/famm.svg" alt="img">
-            </div>
-            <div class="angebot-item search-missions-article">Coaching während der Ausbildung</div>
-        </div>
-        <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
-        <div class="angebot-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
+	</div>
+    <div class="container jobs">
+        <div class="angebot-item">Jobs</div>
+        <h1 class="angebot-title">Mehr als “nur” eine Jobbörse</h1>
+        <div class="angebot-text an-text">Es gibt Tätigkeiten und Berufe, für welche neurodiverse Menschen genau die richtigen Fähigkeiten und Stärken mitbringen. Gerne veröffentlichen wir hier Ihre Stellenausschreibung - anonym - und führen das erste Kennenlernen im recruiting-prozess für Sie durch. Wir entscheiden dann, gemeinsam mit den Bewerber/innen, ob Sie sich alleine bei Ihnen vorstellen oder gerne unsere Unterstützung in Anspruch nehmen wollen. Auch Sie als Arbeitgeber/in können entscheiden, ob Sie inAut gerne beim Erstgespräch dabei haben möchten.</div>
     </div>
+
+    <div class="jobs-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-p">
+                    <div class="jobs-block">
+                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
+                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
+                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
+                            Personen mit einer Diagnose auf dem ...
+                        </p>
+                        <a class="general-link" href="#">zum Stelleninserat</a>
+                    </div>
+                </div>
+
+                <div class="col-12 text-p">
+                    <div class="jobs-block">
+                        <h2>Anonymes CV, Voll-/Teilzeit in Zürich, Luzern, Aargau</h2>
+                        <p>Bachelor in Business Administration mit Vertiefung in Public & Nonprofit Management
+                            Exakte und strukturierte Arbeitsweise, Offenheit, Zuverlässigkeit
+                            Sehr gute Sprachkenntnisse
+                        </p>
+                        <a class="general-link" href="#">zum Curiculum Vitae</a>
+                    </div>
+                </div>
+
+                <div class="col-12 text-p">
+                    <div class="jobs-block">
+                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
+                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
+                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
+                            Personen mit einer Diagnose auf dem ...
+                        </p>
+                        <a class="general-link" href="#">zum Stelleninserat</a>
+                    </div>
+                </div>
+
+                <div class="col-12 text-p">
+                    <div class="jobs-block">
+                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
+                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
+                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
+                            Personen mit einer Diagnose auf dem ...
+                        </p>
+                        <a class="general-link" href="#">zum Stelleninserat</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="contact-us">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
@@ -75,14 +121,6 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="search-missions-text">Zurück</div>
-        </div>
-    </div>
 </main>
 	<footer class="footer">
     <div class="footer-content">
