--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -40,7 +40,7 @@
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
-				<li><a href="#">Jobs</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
 				<li><a href="#"> Kontakt</a></li>
 			</ul>
 			<div class="burger d-lg-none">
