job-description content

--- a/app/_jobs.html
+++ b/app/_jobs.html
@@ -20,7 +20,7 @@
                             Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
                             Personen mit einer Diagnose auf dem ...
                         </p>
-                        <a class="general-link" href="#">zum Stelleninserat</a>
+                        <a class="general-link" href="job-description.html">zum Stelleninserat</a>
                     </div>
                 </div>
 
