--- a/app/job-description.html
+++ b/app/job-description.html
@@ -52,68 +52,47 @@
 		</div>
 	</div>
 </header>
-	<main class="main angebot">
-	<div class="container home">
-        <div class="angebot-header">
-            <img class="angebot-img" src="img/jobm.png" alt="img">
+	<main class="main search-missions">
+	<div class="container search-missions-container">
+        <div class="search-missions-way">
+            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="#">IT-Consultantg</a>
         </div>
-	</div>
-    <div class="container jobs">
-        <div class="angebot-item">Jobs</div>
-        <h1 class="angebot-title">Mehr als “nur” eine Jobbörse</h1>
-        <div class="angebot-text an-text">Es gibt Tätigkeiten und Berufe, für welche neurodiverse Menschen genau die richtigen Fähigkeiten und Stärken mitbringen. Gerne veröffentlichen wir hier Ihre Stellenausschreibung - anonym - und führen das erste Kennenlernen im recruiting-prozess für Sie durch. Wir entscheiden dann, gemeinsam mit den Bewerber/innen, ob Sie sich alleine bei Ihnen vorstellen oder gerne unsere Unterstützung in Anspruch nehmen wollen. Auch Sie als Arbeitgeber/in können entscheiden, ob Sie inAut gerne beim Erstgespräch dabei haben möchten.</div>
-    </div>
-
-    <div class="jobs-content">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-p">
-                    <div class="jobs-block">
-                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
-                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
-                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
-                            Personen mit einer Diagnose auf dem ...
-                        </p>
-                        <a class="general-link" href="job-description.html">zum Stelleninserat</a>
-                    </div>
-                </div>
-
-                <div class="col-12 text-p">
-                    <div class="jobs-block">
-                        <h2>Anonymes CV, Voll-/Teilzeit in Zürich, Luzern, Aargau</h2>
-                        <p>Bachelor in Business Administration mit Vertiefung in Public & Nonprofit Management
-                            Exakte und strukturierte Arbeitsweise, Offenheit, Zuverlässigkeit
-                            Sehr gute Sprachkenntnisse
-                        </p>
-                        <a class="general-link" href="#">zum Curiculum Vitae</a>
-                    </div>
-                </div>
-
-                <div class="col-12 text-p">
-                    <div class="jobs-block">
-                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
-                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
-                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
-                            Personen mit einer Diagnose auf dem ...
-                        </p>
-                        <a class="general-link" href="#">zum Stelleninserat</a>
-                    </div>
-                </div>
-
-                <div class="col-12 text-p">
-                    <div class="jobs-block">
-                        <h2>IT-Consultant, Voll-/Teilzeit für Standort Zürich</h2>
-                        <p>Die auticon Swiss AG ist ein IT-Dienstleistungs-Unternehmen mit Fokus auf Coding, Testing und Data
-                            Analytics. auticon steht für autistic consultants, denn das Besondere bei uns ist: Wir stellen ausschliesslich
-                            Personen mit einer Diagnose auf dem ...
-                        </p>
-                        <a class="general-link" href="#">zum Stelleninserat</a>
-                    </div>
-                </div>
-            </div>
+        <div class="search-missions-item">
+            <div class="angebot-item search-missions-article">Voll-/Teilzeit für Standort Zürich</div>
+        </div>
+        <h1>IT-Consultant gesucht</h1>
+        <div class="angebot-text search-text">Unsere IT-Fachkräfte profitieren von einer festen Anstellung, Job Coaching und guten Karrieremöglichkeiten. Unsere Kunden profitieren von den ausgeprägten Stärken im Bereich Mustererkennung,
+            Analyse und Konzentration.
+        </div>
+        <div class="line-dec">
+            <div class="line-dec-content"></div>
+        </div>
+        <div class="blog-article job-description">
+            <h2>Wir suchen IT-Mitarbeiter (m/w/d)</h2>
+            <p class="text-p">mit einer Diagnose auf dem Autismus-Spektrum für den Standort Zürich</p>
+            <p> Du bringst <strong>solide Erfahrung</strong> mit in den Bereichen:</p>
+            <ul>
+                <li>Anwendungsentwicklung</li>
+                <li>Datenanalyse / Data Science</li>
+                <li>Datenbankentwicklung</li>
+                <li>Test- und Qualitätsmanagement</li>
+                <li>Security, Compliance & Prozessmanagement</li>
+                <li>Finanz- und/oder Versicherungswesen</li>
+            </ul>
+            <h2>Unser Angebot an Dich</h2>
+            <ul>
+                <li>Wir setzen Dich in IT-Projekten ein, die zu Deinen Fähigkeiten passen</li>
+                <li>Unsere Job Coaches bemühen sich, Dir ein Umfeld zu schaffen, in dem auf Deine Bedürfnisse Rücksicht genommen wird, so dass Du dich auf Deine Stärken konzentrieren kannst</li>
+                <li>Unsere Projektmanager unterstützen Dich fachlich</li>
+                <li>Wir bieten Dir fachliche und persönliche Weiterbildungsmöglichkeiten</li>
+            </ul>
+            <h2>Interesse geweckt?</h2>
+            <p>Dann kontaktieren Sie uns noch heute und senden uns ihr CV an</p>
+            <a class="job-description-link" href="#">inaut@hin.ch</a>
         </div>
     </div>
-
     <div class="contact-us">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
@@ -121,6 +100,14 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
+    <div class="container search-missions-back">
+        <div class="search-missions-content">
+            <a class="search-missions-img" href="angebot.html">
+                <img src="img/svg/leftm.svg" alt="img">
+            </a>
+            <div class="search-missions-text">Zurück</div>
+        </div>
+    </div>
 </main>
 	<footer class="footer">
     <div class="footer-content">
